<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login_activity"
    android:background="@drawable/background">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#C4000000"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:layout_editor_absoluteX="46dp"
        tools:layout_editor_absoluteY="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="253dp"
                android:layout_height="66dp"
                android:fontFamily="@font/aldrich"
                android:text="@string/login"
                android:textAlignment="center"
                android:textColor="#F1EEEE"
                android:textSize="48sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.075" />

            <EditText
                android:id="@+id/inputemail"
                android:layout_width="371dp"
                android:layout_height="60dp"
                android:layout_marginTop="64dp"
                android:height="48dp"
                android:background="@drawable/input_bg"
                android:drawableStart="@drawable/baseline_email_24"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingStart="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <EditText
                android:id="@+id/inputpassword"
                android:layout_width="371dp"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:height="48dp"
                android:background="@drawable/input_bg"
                android:drawableStart="@drawable/baseline_security_24"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.4"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/inputemail" />

            <TextView
                android:id="@+id/fgpassword"
                android:layout_width="181dp"
                android:layout_height="29dp"

                android:layout_marginTop="24dp"
                android:text="@string/fgpassword"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.913"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/inputpassword"
                app:layout_constraintVertical_bias="0.023" />

            <Button
                android:id="@+id/button"
                android:layout_width="300dp"
                android:layout_height="60dp"


                android:layout_marginTop="28dp"
                android:backgroundTint="#80000000"


                android:text="@string/btnlogin"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="@+id/inputpassword"
                app:layout_constraintHorizontal_bias="0.436"
                app:layout_constraintStart_toStartOf="@+id/inputpassword"
                app:layout_constraintTop_toBottomOf="@+id/fgpassword" />

            <TextView
                android:id="@+id/newaccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/input_bg"
                android:text="@string/newacc"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.518"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button"
                app:layout_constraintVertical_bias="0.174" />

            <TextView
                android:id="@+id/or"
                android:layout_width="56dp"
                android:layout_height="31dp"
                android:text="OR"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp"

                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.528"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/newaccount"
                app:layout_constraintVertical_bias="0.123" />

            <View
                android:id="@+id/view2"
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:background="@color/white"
                app:layout_constraintBottom_toBottomOf="@+id/or"
                app:layout_constraintEnd_toStartOf="@+id/or"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/button"
                app:layout_constraintTop_toTopOf="@+id/or" />

            <View
                android:id="@+id/view"
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_marginBottom="16dp"
                android:background="@color/white"
                app:layout_constraintBottom_toBottomOf="@+id/or"
                app:layout_constraintEnd_toEndOf="@+id/button"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/or" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="95dp"
                android:layout_height="72dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.541"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/or"
                app:layout_constraintVertical_bias="0.138"
                app:srcCompat="@drawable/gog" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>